open source code needed aligning (fixed)

--- a/src/style.css
+++ b/src/style.css
@@ -70,10 +70,9 @@ body {
     transition: 0.3s ease-in-out;
   }
   footer {
-  display: inline;
-  position: relative;
-  margin-left: 140px;
-  margin-top: -20px;
+  max-width: 600px;
+  margin: 30px auto;
+  color: grey;
   }
 
   .weather-forecast {
